# release2ntfy

./: .gitignore  Dockerfile  README.md  compose.yml  config_example.yaml  docker-entrypoint.sh  pyproject.toml
.forgejo/workflows/: build-release.yml
release2ntfy/: main.py  schemas.py  templates.py
